started converting ZipHeader

--- a/ZipReaderLibC/ZipReaderLibC.vcxproj
+++ b/ZipReaderLibC/ZipReaderLibC.vcxproj
@@ -132,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Zip.h" />
+    <ClInclude Include="ZipHeader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
