have C++ zip reader working

--- a/ZipReaderLibC/ZipReaderLibC.vcxproj
+++ b/ZipReaderLibC/ZipReaderLibC.vcxproj
@@ -127,11 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CRC.cpp" />
     <ClCompile Include="Zip.cpp" />
+    <ClCompile Include="ZipExtraFieldRead.cpp" />
     <ClCompile Include="ZipReaderLibC.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CRC.h" />
     <ClInclude Include="Zip.h" />
+    <ClInclude Include="ZipExtraFieldRead.h" />
     <ClInclude Include="ZipHeader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
