--- a/ZipReaderLibC/ZipReaderLibC.vcxproj.filters
+++ b/ZipReaderLibC/ZipReaderLibC.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="CRC.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CodePage437.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Zip.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CRC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CodePage437.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
