Changed input filename type to work with unicode characters.

--- a/ZipReaderLib/Properties/launchSettings.json
+++ b/ZipReaderLib/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ZipReaderLib": {
       "commandName": "Project",
-      "commandLineArgs": "\"T:\\TotalDosCollection\\TDC Daily\\Games\\Files\\1993\\Indianapolis 500- The Simulation (1993)(Electronic Arts, Inc.) [Racing - Driving, Simulation, Sports][!].zip\""
+      "commandLineArgs": "\"T:\\TotalDosCollection\\TDC Daily\""
     }
   }
 }
